fix image loading

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
         <div class="header-branding">
           <a href="/">
             <img
-              src="./src/assets/logo-hubgets-simple.png"
+              src="./assets/logo-hubgets-simple.png"
               alt="Hubgets"
               title="Hubgets"
             />
@@ -62,17 +62,14 @@
             <div class="registration-info-details">
               <ul>
                 <li>
-                  <img
-                    src="./src/assets/notifications.png"
-                    alt="Communication"
-                  />
+                  <img src="./assets/notifications.png" alt="Communication" />
                   <p>
                     Centralizes communication channels and reduces overhead.
                   </p>
                 </li>
                 <li id="reach">
                   <img
-                    src="./src/assets/reach_instantly.png"
+                    src="./assets/reach_instantly.png"
                     alt="Bring together"
                   />
                   <p>
@@ -82,7 +79,7 @@
                 </li>
                 <li id="search">
                   <img
-                    src="./src/assets/search_everything.png"
+                    src="./assets/search_everything.png"
                     alt="Capture information"
                   />
                   <p>
@@ -95,7 +92,7 @@
           </div>
         </div>
         <div class="registration-help">
-          <img src="./src/assets/privacy.png" alt="Get help" />
+          <img src="./assets/privacy.png" alt="Get help" />
           <div>
             <p>+1 845 894 123</p>
             <a href="/">help@hubgets.com</a>
@@ -106,7 +103,7 @@
     <footer>
       <div class="container">
         <div class="footer-logo">
-          <img src="./src/assets/bubbles-white.png" alt="Hubgets" />
+          <img src="./assets/bubbles-white.png" alt="Hubgets" />
         </div>
         <div class="footer-links">
           <div class="footer-links-group">
@@ -133,7 +130,7 @@
               <li>
                 <a href="#">
                   <img
-                    src="./src/assets/twitter.png"
+                    src="./assets/twitter.png"
                     alt="twitter"
                     class="social-img"
                   />
@@ -143,7 +140,7 @@
               <li>
                 <a href="#">
                   <img
-                    src="./src/assets/youtube.png"
+                    src="./assets/youtube.png"
                     alt="youtube"
                     class="social-img"
                   />
